--- a/blog/.vuepress/styles/index.scss
+++ b/blog/.vuepress/styles/index.scss
@@ -11,6 +11,15 @@ p.desc {
   // brand colors
   --c-brand: #f08d49;
   --c-brand-light: #f08d49;
+
+  // plugin-pwa-popup
+  --pwa-popup-text-color: var(--c-text);
+  --pwa-popup-bg-color: var(--c-bg);
+  --pwa-popup-border-color: var(--c-brand);
+  --pwa-popup-shadow: 0 4px 16px var(--c-brand);
+  --pwa-popup-btn-text-color: var(--c-bg);
+  --pwa-popup-btn-bg-color: var(--c-brand);
+  --pwa-popup-btn-hover-bg-color: var(--c-brand-light);
 }
 
 // plugin-docsearch
