--- a/packages/clipboard/src/client/style.css
+++ b/packages/clipboard/src/client/style.css
@@ -1,3 +1,11 @@
-.code-copy-added:hover > div > .code-copy svg {
+.code-copy-added-top:hover > div > .code-copy svg {
   opacity: 0.75;
+}
+
+.code-copy-added-bottom:hover > div > .code-copy svg {
+  opacity: 0.75;
+}
+
+div[class*=language-].code-copy-added-top::before {
+  right: 3em;
 }
