docs(mac): update Mac document

--- a/blog/.vuepress/styles/index.scss
+++ b/blog/.vuepress/styles/index.scss
@@ -111,3 +111,8 @@ html.dark .DocSearch {
 .theme-gungnir-content:not(.custom) p {
   margin: 0
 }
+
+dd {
+  margin: 0.1em 0 0.8rem 0;
+  margin-inline-start: 2rem;
+}
