--- a/blog/.vuepress/styles/index.scss
+++ b/blog/.vuepress/styles/index.scss
@@ -13,13 +13,12 @@ p.desc {
   --c-brand-light: #f08d49;
 
   // plugin-pwa-popup
-  --pwa-popup-text-color: var(--c-text);
-  --pwa-popup-bg-color: var(--c-bg);
-  --pwa-popup-border-color: var(--c-brand);
-  --pwa-popup-shadow: 0 4px 16px var(--c-brand);
-  --pwa-popup-btn-text-color: var(--c-bg);
-  --pwa-popup-btn-bg-color: var(--c-brand);
-  --pwa-popup-btn-hover-bg-color: var(--c-brand-light);
+  --pwa-popup-z-index: 40 !important;
+  --pwa-popup-bg-color: var(--c-bg-transparent) !important;
+  --pwa-popup-border-color: var(--c-border-sub) !important;
+  --pwa-popup-shadow: none !important;
+  --pwa-popup-btn-bg-color: #377bb5 !important;
+  --pwa-popup-btn-hover-bg-color: rgba(55, 123, 181, 0.8) !important;
 }
 
 // plugin-docsearch
