--- a/blog/.vuepress/styles/index.scss
+++ b/blog/.vuepress/styles/index.scss
@@ -55,8 +55,41 @@ html.dark {
   --docsearch-hit-background: var(--c-bg);
   --docsearch-hit-shadow: 0 1px 3px 0 var(--c-border-dark);
   --docsearch-footer-background: var(--c-bg);
-}
 
+  &.DocSearch-Button {
+    background: rgba(0, 0, 0, 0.3);
+    transition: ease-out 80ms;
+
+    .DocSearch-Button-Key {
+      top: 0px;
+      width: 18px;
+      height: 16px;
+      font-size: 12px;
+      background: white;
+      color: #000;
+      box-shadow: inset 0 -2px 0 0 #cdcde6, inset 0 0 1px 1px #fff, 0 1px 2px 1px rgb(30 35 90 / 40%);
+    }
+
+    .DocSearch-Button-Placeholder {
+      color: white;
+      font-size: 0.9rem;
+    }
+    .DocSearch-Search-Icon {
+      width: 19px;
+      height: 14px;
+      color: white;
+    }
+    &:active, &:focus, &:hover {
+      background: var(--c-bg);
+      .DocSearch-Button-Placeholder {
+        color: var(--c-text);
+      }
+      .DocSearch-Search-Icon {
+        color: var(--c-text);
+      }
+    }
+  }
+}
 html.dark .DocSearch {
   --docsearch-logo-color: var(--c-text);
   --docsearch-hit-active-color: var(--c-bg-light);
@@ -66,35 +99,24 @@ html.dark .DocSearch {
   --docsearch-key-gradient: linear-gradient(-225deg, #444950, #1c1e21);
   --docsearch-footer-shadow: inset 0 1px 0 0 rgba(73, 76, 106, 0.5),
     0 -4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-
-#docsearch-container .DocSearch-Button-Keys {
-  display: none;
+  
+  &.DocSearch-Button {
+    background: rgba(0, 0, 0, 0.2);
+    transition: ease-out 80ms;
+    &:active, &:focus, &:hover {
+      background: rgba(0, 0, 0, 0.4);
+    }
+  }
 }
 
 .is-fixed .DocSearch{
   color: var(--c-text) !important;
-}
-
-.DocSearch {
-  &.DocSearch-Button {
-    background: rgb(245 246 247 / 30%);
-    transition: ease-in-out 100ms;
-    margin: 0;
+  background: var(--c-bg-light);
+  .DocSearch-Button-Placeholder {
+    color: var(--c-text) !important;
   }
   .DocSearch-Search-Icon {
-    width: 0.8rem;
-    height: 0.8rem;
-  }
-  .DocSearch-Button-Placeholder {
-    font-size: 14px;
-  }
-  .DocSearch-Button-Key {
-    width: 15px;
-    height: 15px;
-    font-size: 0.2rem;
-    margin-right: 1.4em;
+    color: var(--c-text) !important;
   }
 }
 
@@ -109,9 +131,6 @@ html.dark .DocSearch {
 }
 
 @media (max-width: 719px) {
-  .DocSearch-Button {
-    border-radius: 6px !important;
-  }
   .link-container .link {
 		width: 70%;
 		margin-left: 10px;
